kustomize/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-simulator
  labels:
    app: rest-simulator
spec:
  selector:
    app: rest-simulator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
